fix a few warning

--- a/network/data/makefile
+++ b/network/data/makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CXX=g++
 INC+= -I../ -I../../lib  -I../../3rdlib
-LIB+=-lpthread  -L../../lib -lvfs   -L../../3rdlib -lnmshm -lstdc++
+LIB+=-lpthread  -L../../lib -lvfs 
 CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -fPIC -shared #-z defs
 TARGET=vfs_data.so
 ALL:$(TARGET)
