--- a/cdc/lib/makefile
+++ b/cdc/lib/makefile
@@ -6,7 +6,7 @@ CXX=gcc
 REAL_CFLAGS=$(OPTIMIZATION) -fPIC $(CFLAGS) $(WARNINGS) $(DEBUG)
 REAL_LDFLAGS=$(LDFLAGS)
 INCLUDE= -I../inc -I../../lib
-CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -Wl,-Bdynamic -lssl -fPIC
+CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -Wl,-Bdynamic -fPIC
 LIB+=-L../lib/ -lcdc -L../../lib -lvfs 
 CFLAGS+= $(INCLUDE)
 TARGET = test_hash
