rm db operation

--- a/cdc/redis/src/makefile
+++ b/cdc/redis/src/makefile
@@ -2,7 +2,7 @@ CC=gcc
 CXX=g++
 INC+= -I./ -I../inc -I../../../lib -I../../../3rdlib 
 LIB+= -lpthread -ldl -lrt -rdynamic 
-LIB+=-L../../lib/ -lcdc -L../../../lib/ -lvfs -L../../../3rdlib -lnmshm -L../lib/ -lhiredis -lcdc_redis_api
+LIB+=-L../../lib/ -lcdc -L../../../lib/ -lvfs -L../lib/ -lcdc_redis_api -L../hiredis/ -lhiredis
 
 CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE=1 -D_LARGE_FILES=1 -D_XOPEN_SOURCE=600
 TARGET= cdc_redis cdc_redis_test cdc_redis_del
