mv header file to inc and mv sub to plugins

--- a/core/makefile
+++ b/core/makefile
@@ -1,7 +1,7 @@
 NS=vfs_master
 CC=gcc
 CXX=g++
-INC+= 
+INC+= -I../inc 
 LIB+= -lpthread -ldl -lrt -rdynamic -L../lib -lvfs -lstdc++ 
 TARGET=$(NS)
 ALL:$(TARGET)
