--- a/plugins/cdc_http/makefile
+++ b/plugins/cdc_http/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CXX=g++
-INC+= -I../ -I../../lib  -I../../3rdlib -I../../cdc/inc -I../../cdc/redis/inc
+INC+= -I../../inc  -I../../3rdlib -I../../cdc/inc -I../../cdc/redis/inc
 LIB+=-lpthread  -L../../lib -lvfs   -L../../cdc/redis/hiredis -lhiredis -L../../cdc/lib/ -lcdc -L../../cdc/redis/lib/ -lcdc_redis_api
 CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -DVFS_SERVER=1 -D_REENTRANT -D_FILE_OFFSET_BITS=64 -fPIC -shared #-z defs
 TARGET=cdc_http.so
