--- a/plugins/cdn_source/makefile
+++ b/plugins/cdn_source/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CXX=g++
-INC+= -I../ -I../../lib  -I../../3rdlib
+INC+= -I../../inc  -I../../3rdlib
 LIB+=-lpthread  -L../../lib -lvfs   -L../../3rdlib -lnmshm -lstdc++
 CFLAGS+= -g -O2 -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -fPIC -shared #-z defs
 TARGET=vfs_fcs_sig.so
