--- a/network/vfs_master.conf
+++ b/network/vfs_master.conf
@@ -1,17 +1,17 @@
-	disable_watchdog = 0
+	disable_watchdog = 1
 	maxfds = 10240
 	sig_port = 49715
 	data_port = 49716
 	timeout = 360
-	real_rm_time = 60
-	cs_sync_dir = 0
+	real_rm_time = 7200
+	cs_sync_dir = 1
 	cktimeout = 1
 	task_timeout = 86400
 	fcs_max_connects = 100
 	cs_max_connects = 200
-	disk_minfree = 2G
+	disk_minfree = 20G
 	timedlock_time = 10
-	reload_time = 120
+	g_config.sync_dir_count = 10
 [log]
 	main_loglevel = debug
 	main_logname = ../log/main.log
@@ -39,28 +39,27 @@
 	agent_logtime = 21600
 
 [iplist]
-	sig_tracker = 113.105.245.83
-	cs_dir = ../csdir
+	sig_tracker = tracker1.vfs.56.com
+	sig_tracker = tracker2.vfs.56.com
+	cs_dir = /home/syncfile
+	fcsfile = /home/syncfile/fcs_list.txt
 
 [csisp]
-	newone = test,7
+	newone = undefine,7
 	newone = bbtv,8
 	newone = dxt,9
 	newone = archive1,10
 
 [vfs]
 	test = 0
-	cs_datadir = /diska/vfs/
-    fcs_datadir = /diska/vfs/path/flvdata/
-	path = /diska/vfs/path
-	deldir = /diska/vfs/path/delfile
-	sync_starttime = 12:30:00
-	sync_endtime = 14:00:00
+	cs_datadir = /diska/
+    fcs_datadir = /home/webadm/htdocs/flvdownload
+	path = /home/vfs/path
+	deldir = /home/vfs/path/delfile
 
 [voss]
-	server_ip = 113.105.245.45
-	server_ip = 113.105.245.125
-	tmpdir = /diska/vfs/path/tmpdir
+	server_ip = voss.vfs.56.com
+	tmpdir = /home/vfs/path/tmpdir
 	timesplice = 60
 	interval = 300
 
@@ -68,5 +67,9 @@
 	allow_suffix = *.flv
 	allow_suffix = *.flv.mp4
 
-[cdc]
-	mysql_db = 0
+[proxy]
+	isp = edu
+	edu_host = 10.16.93.202
+	edu_port = 5680
+
+
